--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,12 +6,12 @@
     <img
       src="/images/band-photo.jpg"
       alt="Doom Dogs band members"
-      class="w-full h-full object-cover"
+      class="w-full h-full object-cover object-[center_20%]"
     />
     <div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/70 to-black"></div>
   </div>
   
-  <div class="relative z-10 h-full flex flex-col items-center justify-center text-center">
+  <div class="relative z-10 h-full flex flex-col items-center justify-end pb-36 text-center">
     <h1 class="text-6xl md:text-8xl font-bold text-white mb-4 tracking-wider">
       DOOM DOGS
     </h1>
