added bub 1 photo to About section

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -28,7 +28,7 @@
       </div>
       <div>
         <img
-          src="/images/band-photo.jpg"
+          src="/images/bub_tveye1.jpg"
           alt="Doom Dogs band members"
           class="rounded-lg shadow-xl w-full"
         />
